--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URL = mongodb+srv://maoutfits:LHMlprssSIsBgtjV@maoutfits.do9zzfk.mongodb.net/?appName=maoutfits
 PORT = 5500
 PASS_SEC = max
+JWT_SEC = max
